[gd_scene load_steps=14 format=2]

[ext_resource path="res://ActivityView.gd" type="Script" id=1]
[ext_resource path="res://assets/regular-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/icon-8.png" type="Texture" id=3]
[ext_resource path="res://assets/icon-6.png" type="Texture" id=4]
[ext_resource path="res://assets/icon-2.png" type="Texture" id=5]
[ext_resource path="res://assets/icon-0.png" type="Texture" id=6]
[ext_resource path="res://assets/icon-1.png" type="Texture" id=7]
[ext_resource path="res://assets/icon-7.png" type="Texture" id=8]
[ext_resource path="res://assets/icon-18.png" type="Texture" id=9]
[ext_resource path="res://assets/icon-20.png" type="Texture" id=10]
[ext_resource path="res://assets/icon-19.png" type="Texture" id=11]
[ext_resource path="res://TimeDisplay.tscn" type="PackedScene" id=13]
[ext_resource path="res://ColorGridPanel.tscn" type="PackedScene" id=20]

[node name="ActivityView" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_right = 1080.0
margin_bottom = 77.0
custom_constants/separation = 20

[node name="ColorPicker" type="TextureButton" parent="Menu"]
margin_right = 48.0
margin_bottom = 77.0
rect_min_size = Vector2( 48, 0 )
hint_tooltip = "Color marker"

[node name="Title" type="LineEdit" parent="Menu"]
margin_left = 68.0
margin_right = 620.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Enter name of activity"

[node name="Start" type="TextureButton" parent="Menu"]
margin_left = 640.0
margin_right = 704.0
margin_bottom = 77.0
hint_tooltip = "Start timer"
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="Stop" type="TextureButton" parent="Menu"]
margin_left = 724.0
margin_right = 788.0
margin_bottom = 77.0
hint_tooltip = "Stop timer"
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="TextureButton" parent="Menu"]
margin_left = 808.0
margin_right = 808.0
margin_bottom = 77.0
hint_tooltip = "Reset time"

[node name="TimeDisplay" parent="Menu" instance=ExtResource( 13 )]
margin_left = 828.0
margin_right = 1060.0
margin_bottom = 67.0

[node name="Home" type="TextureButton" parent="Menu"]
margin_left = 1080.0
margin_right = 1080.0
margin_bottom = 77.0
hint_tooltip = "Back to list"

[node name="LastStart" type="Label" parent="."]
visible = false
margin_top = 68.0
margin_right = 1920.0
margin_bottom = 82.0

[node name="LastStop" type="Label" parent="."]
visible = false
margin_top = 68.0
margin_right = 1920.0
margin_bottom = 82.0

[node name="NotesLabel" type="Label" parent="."]
margin_top = 97.0
margin_right = 1080.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 2 )
text = "Notes"

[node name="Notes" type="TextEdit" parent="."]
margin_top = 184.0
margin_right = 1080.0
margin_bottom = 1836.0
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="."]
margin_top = 1856.0
margin_right = 1080.0
margin_bottom = 1920.0

[node name="Spacer" type="Control" parent="Footer"]
margin_right = 1012.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="Delete" type="TextureButton" parent="Footer"]
margin_left = 1016.0
margin_right = 1080.0
margin_bottom = 64.0
hint_tooltip = "Delete activity"
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="c" type="CanvasLayer" parent="."]

[node name="Confirm" type="ConfirmationDialog" parent="c"]
margin_right = 333.0
margin_bottom = 70.0
dialog_text = "Are you sure that you want to delete this activity?"

[node name="ColorGridPanel" parent="c" instance=ExtResource( 20 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1024.0
margin_right = 56.0
margin_bottom = 1080.0

[connection signal="pressed" from="Menu/ColorPicker" to="." method="_on_ColorPicker_pressed"]
[connection signal="text_changed" from="Menu/Title" to="." method="_on_Title_text_changed"]
[connection signal="pressed" from="Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Menu/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Menu/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Footer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="confirmed" from="c/Confirm" to="." method="_on_Confirm_confirmed"]
[connection signal="color_changed" from="c/ColorGridPanel" to="." method="_on_ColorGridPanel_color_changed"]
